# LOKI

./: .gitignore  404.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  PROTOCOLS.md  README.md  hej.txt  index.html  mkdocs.yml  sitemap.xml
LOKI/: CMakeLists.txt
LOKI/include/: adjustSeries.h  appDetection.h  appHomogen.h  appMedian.h  appRegress.h  appStat.h  autoCov.h  changePoint.h  coredata.h  deseas.h  detrend.h  fit.h  gnuplot.h  help.h  load.h  loki.h  plot.h  proho.h  setting.h  timeStamp.h  version.h
LOKI/res/: loki.json  loki.json.zaloha  proho.json
LOKI/src/: adjustSeries.cpp  appDetection.cpp  appHomogen.cpp  appHomogen.cpp~  appMedian.cpp  appRegress.cpp  appStat.cpp  autoCov.cpp  changePoint.cpp  coredata.cpp  deseas.cpp  detrend.cpp  fit.cpp  gnuplot.cpp  load.cpp  loki.cpp  main.cpp  plot.cpp  proho.cpp  setting.cpp  stat.cpp  timeStamp.cpp  version.cpp
LOKI/tst/: autoCov_tst.cpp  autoCov_tst.h  chp_tst.cpp  chp_tst.h  load_tst.cpp  load_tst.h  mjd_tst.cpp  mjd_tst.h  synth_tst.cpp  synth_tst.h
apps/loki/: CMakeLists.txt  main.cpp
apps/loki_arima/: CMakeLists.txt  main.cpp
apps/loki_clustering/: CMakeLists.txt  main.cpp
apps/loki_decomposition/: CMakeLists.txt  main.cpp
apps/loki_filter/: CMakeLists.txt  main.cpp
apps/loki_geodesy/: CMakeLists.txt  main.cpp
apps/loki_homogeneity/: CMakeLists.txt  main.cpp
apps/loki_kalman/: CMakeLists.txt  main.cpp
apps/loki_kriging/: CMakeLists.txt  main.cpp
apps/loki_multivariate/: CMakeLists.txt  main.cpp
apps/loki_outlier/: CMakeLists.txt  main.cpp
apps/loki_qc/: CMakeLists.txt  main.cpp
apps/loki_regression/: CMakeLists.txt  main.cpp
apps/loki_simulate/: CMakeLists.txt  main.cpp
apps/loki_spatial/: CMakeLists.txt  main.cpp
apps/loki_spline/: CMakeLists.txt  main.cpp
apps/loki_ssa/: CMakeLists.txt  main.cpp
apps/loki_stationarity/: CMakeLists.txt  main.cpp
libs/loki_arima/: CMakeLists.txt
libs/loki_arima/include/loki/arima/: arimaAnalyzer.hpp  arimaFitter.hpp  arimaForecaster.hpp  arimaOrderSelector.hpp  arimaResult.hpp  plotArima.hpp
libs/loki_arima/src/: arimaAnalyzer.cpp  arimaFitter.cpp  arimaForecaster.cpp  arimaOrderSelector.cpp  plotArima.cpp
libs/loki_clustering/: CMakeLists.txt
libs/loki_clustering/include/loki/clustering/: clusteringAnalyzer.hpp  clusteringResult.hpp  dbscan.hpp  kMeans.hpp  plotClustering.hpp
libs/loki_clustering/src/: clusteringAnalyzer.cpp  dbscan.cpp  kMeans.cpp  plotClustering.cpp
libs/loki_core/: CMakeLists.txt
libs/loki_core/include/loki/core/: config (1).hpp  config.hpp  configLoader.hpp  directoryScanner.hpp  exceptions.hpp  logger.hpp  nanPolicy.hpp  version.hpp  version.hpp.in
libs/loki_core/include/loki/io/: dataManager.hpp  geodesyLoader.hpp  gnuplot.hpp  loader.hpp  plot.hpp  spatialLoader.hpp
libs/loki_core/include/loki/math/: bspline.hpp  bsplineFit.hpp  designMatrix.hpp  (+23 more)
libs/loki_core/src/core/: configLoader.cpp  directoryScanner.cpp  logger.cpp
libs/loki_core/src/io/: dataManager.cpp  geodesyLoader.cpp  gnuplot.cpp  loader.cpp  plot.cpp  spatialLoader.cpp
libs/loki_core/src/math/: bspline.cpp  bsplineFit.cpp  designMatrix.cpp  embedMatrix.cpp  hatMatrix.cpp  interpolation.cpp  krigingBase.cpp  krigingVariogram.cpp  lagMatrix.cpp  lm.cpp  lsq.cpp  naturalNeighbor.cpp  nelderMead.cpp  ordinaryKriging.cpp  randomizedSvd.cpp  rbf.cpp  simpleKriging.cpp  spatialVariogram.cpp  spline.cpp  svd.cpp  universalKriging.cpp
libs/loki_core/src/stats/: bootstrap.cpp  descriptive.cpp  distributions.cpp  filter.cpp  hypothesis.cpp  metrics.cpp  permutation.cpp  sampling.cpp  wCorrelation.cpp
libs/loki_core/src/timeseries/: deseasonalizer.cpp  gapFiller.cpp  medianYearSeries.cpp  timeSeries.cpp  timeStamp.cpp
libs/loki_decomposition/: CMakeLists.txt
libs/loki_decomposition/src/: classicalDecomposer.cpp  decompositionAnalyzer.cpp  plotDecomposition.cpp  stlDecomposer.cpp
libs/loki_evt/: CMakeLists.txt
libs/loki_evt/src/: evtAnalyzer.cpp  gev.cpp  gpd.cpp  plotEvt.cpp  thresholdSelector.cpp
libs/loki_filter/: CMakeLists.txt
libs/loki_filter/src/: emaFilter.cpp  filterAnalyzer.cpp  filterWindowAdvisor.cpp  kernelSmoother.cpp  loessFilter.cpp  movingAverageFilter.cpp  plotFilter.cpp  savitzkyGolayFilter.cpp  splineFilter.cpp  weightedMovingAverageFilter.cpp
libs/loki_geodesy/: CMakeLists.txt
libs/loki_geodesy/src/: coordTransform.cpp  geodesicLine.cpp  geodesyAnalyzer.cpp  geodesyLoader.cpp  plotGeodesy.cpp
libs/loki_gnss/: CMakeLists.txt
libs/loki_gnss/src/: antexParser.cpp  broadcastOrbit.cpp  clkParser.cpp  gnssAnalyzer.cpp  gnssCsvExport.cpp  gnssProtocol.cpp  gnssUtils.cpp  ionosphere.cpp  keplerOrbit.cpp  obsBiasParser.cpp  phaseWindup.cpp  plotGnss.cpp  pppFilter.cpp  pppSolver.cpp  relativity.cpp  rinexNavParser.cpp  rinexObsParser.cpp  satVisibility.cpp  solidTides.cpp  sp3Orbit.cpp  sp3Parser.cpp  sppSolver.cpp  troposphere.cpp
libs/loki_homogeneity/: CMakeLists.txt
libs/loki_homogeneity/src/: bocpdDetector.cpp  changePointDetector.cpp  deseasonalizer.cpp  homogeneityAnalyzer.cpp  homogenizer.cpp  medianYearSeries.cpp  multiChangePointDetector.cpp  peltDetector.cpp  plotHomogeneity.cpp  seriesAdjuster.cpp  snhtDetector.cpp
tests/: CMakeLists.txt
tests/demo/: CMakeLists.txt  demo_bootstrap.cpp  demo_permutation.cpp  demo_sampling.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  test_exceptions.cpp
tests/unit/filter/: test_filters.cpp
tests/unit/homogeneity/: CMakeLists.txt  test_changePointDetector.cpp  test_deseasonalizer.cpp  test_gapFiller.cpp  test_medianYearSeries.cpp  test_multiChangePointDetector.cpp  test_seriesAdjuster.cpp
tests/unit/outlier/: test_iqrDetector.cpp  test_madDetector.cpp  test_outlierCleaner.cpp  test_zScoreDetector.cpp
tests/unit/regression/: test_harmonicRegressor.cpp  test_linearRegressor.cpp  test_polynomialRegressor.cpp  test_robustRegressor.cpp
tests/unit/stats/: test_descriptive.cpp  test_filter.cpp  test_summarize.cpp
tests/unit/timeseries/: test_timeSeries.cpp  test_timeStamp.cpp
(+1728 files in other folders)
